//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/any.proto";
import "dxos/error.proto";

// TODO(burdon): Move to `dxos.mesh.rpc` (reconcile with @dxos/kube repo).
package dxos.rpc;

option go_package = "github.com/dxos/dxos/proto/def/dxos/rpc";

message RpcMessage {
  oneof content {
    Request request = 1;
    Response response = 2;

    /// Means that the node is trying to open the connection.
    bool open = 3;
    /// Means that the node has received the "open" message and is ready to perform requests.
    bool open_ack = 4;

    StreamClose stream_close = 5;

    /// Request to close the connection.
    Bye bye = 6;
  }
}

message Request {
  int32 id = 1;
  string method = 2;
  google.protobuf.Any payload = 3;
  bool stream = 4;
}

message Response {
  int32 id = 1;
  oneof content {
    google.protobuf.Any payload = 2;
    dxos.error.Error error = 3;
    /// Sent when stream is closed without an error.
    bool close = 4;

    /**
     * Sent when the server has processed a request with a streaming response.
     * Can be skipped by the server.
     * In this case the first payload should be treated as the server being ready.
     */
    bool stream_ready = 5;
  }
}

// TODO(burdon): Generalize to event?
// Sent by client to end the streaming response.
message StreamClose {
  int32 id = 1;
}

// TODO(burdon): Rename Trace.
message MessageTrace {
  enum Direction {
    INCOMING = 0;
    OUTGOING = 1;
  }

  Direction direction = 1;
  bytes data = 2;
}

/**
 * Request to close the connection.
 * Connection is closed once both sides have received the Bye message.
 */
message Bye {

}
